--- a/hw_1_1_1_1_1_2_Cинтаксис_Python.ipynb
+++ b/hw_1_1_1_1_1_2_Cинтаксис_Python.ipynb
@@ -1,210 +1,378 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "tvPKWXfD7yRv"
+   },
+   "source": [
+    "#Домашнє завдання до теми \"Синтаксис Python\"\n",
+    "\n",
+    "В ДЗ першого модулю важливою умовою виконання завдань є те, що ми не імпортуємо жодних бібліотек, а робимо все на чистому Python, використовуючи лише базовий функціонал. Це необхідно аби відпрацювати роботу з базовими типами даних. А використовувати бібліотеки ми ще навчимось далі :)"
+   ]
   },
-  "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "xE1KHmUbQVbC"
+   },
+   "source": [
+    "1. Створіть змінну, яка буде зберігати кількість яблук. І надайте їй значення 5. Виведіть значення змінної на екран."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "id": "iz5QpN-vQUtN",
+    "scrolled": true
+   },
+   "outputs": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/HavrylenkoIhor/Home_Work_data_scientist/blob/main/hw_1_1_1_1_1_2_C%D0%B8%D0%BD%D1%82%D0%B0%D0%BA%D1%81%D0%B8%D1%81_Python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+     "data": {
+      "text/plain": [
+       "5"
       ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "#Домашнє завдання до теми \"Синтаксис Python\"\n",
-        "\n",
-        "В ДЗ першого модулю важливою умовою виконання завдань є те, що ми не імпортуємо жодних бібліотек, а робимо все на чистому Python, використовуючи лише базовий функціонал. Це необхідно аби відпрацювати роботу з базовими типами даних. А використовувати бібліотеки ми ще навчимось далі :)"
-      ],
-      "metadata": {
-        "id": "tvPKWXfD7yRv"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "1. Створіть змінну, яка буде зберігати кількість яблук. І надайте їй значення 5. Виведіть значення змінної на екран."
-      ],
-      "metadata": {
-        "id": "xE1KHmUbQVbC"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "iz5QpN-vQUtN"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "2. Виведіть тип змінної, створеної в завданні (1)."
-      ],
-      "metadata": {
-        "id": "wx6RsBHAQd9q"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "f48l2PhiQi86"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "3. Додайте до значення змінної, створеної в завданні (1) число `12` і виведіть результат на екран з допомогою команди `print()`."
-      ],
-      "metadata": {
-        "id": "UEc59pPcQnva"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "gu-vkERpQoCY"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "4. Запустіть код нижче аби створити дві змінні."
-      ],
-      "metadata": {
-        "id": "yOztaNuqqcMy"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a = 48\n",
-        "b = 3"
-      ],
-      "metadata": {
-        "id": "kbXeQSgcqncV"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Створіть нову клітинку нижче цієї з допомогою натискання англійської літери `B`, коли ви НЕ в режимі редагування клітинки. В створеній клітинці створіть змінну `c`, яка буде містити результат ділення `a` на `b`."
-      ],
-      "metadata": {
-        "id": "9ojIRMw3qvw8"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Створіть ще одну нову клітинку, тільки тепер вище цієї. Для цього натисніть  англійську літеру `A`, коли ви НЕ в режимі редагування клітинки. Виведіть в новоствореній клітинці значення і тип кожної зі змінних `a`, `b`, `c`. Проаналізуйте результат.\n"
-      ],
-      "metadata": {
-        "id": "XcmIZ24wq4px"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "У Python, коли ви ділите одне ціле число на інше, результат буде автоматично приведений до типу float, якщо він не є цілим числом. Це робиться для того, щоб забезпечити більш точний результат ділення, особливо коли результат міг би бути десятковим числом."
-      ],
-      "metadata": {
-        "id": "v9rj7B4-sGaG"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "5. Перегляньте наступний код, подумайте, що він виведе в результаті, та потім, запустіть його."
-      ],
-      "metadata": {
-        "id": "irjcdM8puaEx"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a = 10\n",
-        "a = 12\n",
-        "a = 15\n",
-        "\n",
-        "b = 4\n",
-        "b = 8\n",
-        "b = 14\n",
-        "\n",
-        "c = 3\n",
-        "c = 6\n",
-        "c = 9\n",
-        "\n",
-        "\n",
-        "a + b + c"
-      ],
-      "metadata": {
-        "id": "KmhCY0ttt8rW"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "В клітинці нижче закоментуйте деякі рядки так, аби в результаті виконання останнього рядка коду (`a + b + c`) вивелось `17`.\n",
-        "Увага! Рядки треба саме закоментувати, а не видалити.\n",
-        "Можна зручно коментувати рядки з допомогою комбінації клавіш `Ctrl + /` (`Command + /` для Mac)"
-      ],
-      "metadata": {
-        "id": "JrUTyGyQufwq"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "a = 10\n",
-        "a = 12\n",
-        "a = 15\n",
-        "\n",
-        "b = 4\n",
-        "b = 8\n",
-        "b = 14\n",
-        "\n",
-        "c = 3\n",
-        "c = 6\n",
-        "c = 9\n",
-        "\n",
-        "\n",
-        "a + b + c"
-      ],
-      "metadata": {
-        "id": "R4VXgSQKwVoc"
-      },
-      "execution_count": null,
-      "outputs": []
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
     }
-  ]
+   ],
+   "source": [
+    "counter_apple = 5\n",
+    "display(counter_apple)\n",
+    "print(counter_apple)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "wx6RsBHAQd9q"
+   },
+   "source": [
+    "2. Виведіть тип змінної, створеної в завданні (1)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "id": "f48l2PhiQi86"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "print(type(counter_apple))\n",
+    "display(type(counter_apple))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "UEc59pPcQnva"
+   },
+   "source": [
+    "3. Додайте до значення змінної, створеної в завданні (1) число `12` і виведіть результат на екран з допомогою команди `print()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "id": "gu-vkERpQoCY"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(counter_apple + 12)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "yOztaNuqqcMy"
+   },
+   "source": [
+    "4. Запустіть код нижче аби створити дві змінні."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "id": "kbXeQSgcqncV"
+   },
+   "outputs": [],
+   "source": [
+    "a = 48\n",
+    "b = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[48, int]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[3, int]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'c' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/zp/m5zv_vms3gqd2j5q4sbs8gk40000gn/T/ipykernel_39442/2095172254.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'c' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "display([a, type(a)], [b, type(b)],)\n",
+    "display([c, type(c)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = a / b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Пояснення\n",
+    "    Змінні а і b вивелись нормально, а от при виводі змінної с виникла помилка, через те, шо ми її ще не бачимо. (шоб помилка не виникала треба код по виводу змінних і їх типів виконати після створення змінної с) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, int]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[4, int]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[3, int]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display([a, type(a)], [b, type(b)],)\n",
+    "display([c, type(c)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "9ojIRMw3qvw8"
+   },
+   "source": [
+    "Створіть нову клітинку нижче цієї з допомогою натискання англійської літери `B`, коли ви НЕ в режимі редагування клітинки. В створеній клітинці створіть змінну `c`, яка буде містити результат ділення `a` на `b`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "XcmIZ24wq4px"
+   },
+   "source": [
+    "Створіть ще одну нову клітинку, тільки тепер вище цієї. Для цього натисніть  англійську літеру `A`, коли ви НЕ в режимі редагування клітинки. Виведіть в новоствореній клітинці значення і тип кожної зі змінних `a`, `b`, `c`. Проаналізуйте результат.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "v9rj7B4-sGaG"
+   },
+   "source": [
+    "У Python, коли ви ділите одне ціле число на інше, результат буде автоматично приведений до типу float, якщо він не є цілим числом. Це робиться для того, щоб забезпечити більш точний результат ділення, особливо коли результат міг би бути десятковим числом."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "irjcdM8puaEx"
+   },
+   "source": [
+    "5. Перегляньте наступний код, подумайте, що він виведе в результаті, та потім, запустіть його."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "id": "KmhCY0ttt8rW"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "a = 12\n",
+    "a = 15\n",
+    "\n",
+    "b = 4\n",
+    "b = 8\n",
+    "b = 14\n",
+    "\n",
+    "c = 3\n",
+    "c = 6\n",
+    "c = 9\n",
+    "\n",
+    "\n",
+    "a + b + c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "JrUTyGyQufwq"
+   },
+   "source": [
+    "В клітинці нижче закоментуйте деякі рядки так, аби в результаті виконання останнього рядка коду (`a + b + c`) вивелось `17`.\n",
+    "Увага! Рядки треба саме закоментувати, а не видалити.\n",
+    "Можна зручно коментувати рядки з допомогою комбінації клавіш `Ctrl + /` (`Command + /` для Mac)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "id": "R4VXgSQKwVoc"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "# a = 12\n",
+    "# a = 15\n",
+    "\n",
+    "b = 4\n",
+    "# b = 8\n",
+    "# b = 14\n",
+    "\n",
+    "c = 3\n",
+    "# c = 6\n",
+    "# c = 9\n",
+    "\n",
+    "\n",
+    "a + b + c"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 1
 }
