--- a/hw_3_1_Введення_у_Pandas_та_NumPy_.ipynb
+++ b/hw_3_1_Введення_у_Pandas_та_NumPy_.ipynb
@@ -115,6 +115,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.DS_Store',\n",
+       " 'health_insurance_cross_sell_prediction.csv',\n",
+       " 'supermarket_sales.csv']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.listdir('../2. Data/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_path_2 = (\"../2. Data/supermarket_sales.csv\")\n",
+    "df_2 = pd.read_csv(data_path_2)\n",
+    "type(df_2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "ExecuteTime": {
@@ -129,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-11-01T16:54:59.887783Z",
@@ -149,6 +194,24 @@
    "source": [
     "df_shape = df.shape\n",
     "print(f'Набір даних містить {df_shape[0]} рядків та {df_shape[1]} колонок')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Набір даних містить 1000 рядків та 17 колонок\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_shape_2 = df_2.shape\n",
+    "print(f'Набір даних містить {df_shape_2[0]} рядків та {df_shape_2[1]} колонок')"
    ]
   },
   {
@@ -179,6 +242,26 @@
     "df_memory = df.memory_usage().sum()\n",
     "df_memory_mb = df_memory / 1024 ** 2\n",
     "print(round(df_memory_mb, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_memory_2_mb = df_2.memory_usage().sum() / 1024 ** 2\n",
+    "display(round(df_memory_2_mb, 2))"
    ]
   },
   {
